--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "2.8.6",
+    "@types/cookie-session": "2.0.39",
+    "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.6",
+    "@types/helmet": "0.0.45",
+    "@types/mongoose": "5.7.13",
     "@types/node": "13.13.0",
+    "@types/ramda": "0.26.1",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
     "@types/rebass": "^4.0.5",
