--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "devDependencies": {
     "@types/cors": "2.8.6",
-    "@types/cookie-session": "2.0.39",
-    "@types/cookie-parser": "1.4.2",
+    "@types/express-session": "1.17.0",
+    "@types/connect-redis": "0.0.13",
     "@types/express": "4.17.6",
     "@types/helmet": "0.0.45",
     "@types/mongoose": "5.7.13",
@@ -22,6 +22,7 @@
     "@types/react-dom": "16.9.6",
     "@types/rebass": "^4.0.5",
     "@types/rebass__forms": "^4.0.1",
+    "@types/redis": "2.8.18",
     "@typescript-eslint/eslint-plugin": "2.28.0",
     "@typescript-eslint/parser": "2.28.0",
     "eslint": "6.8.0",
