--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.19.0",
-    "cookie-session": "1.4.0",
-    "cookie-parser": "1.4.5",
+    "express-session": "1.17.1",
     "cors": "2.8.5",
     "date-fns": "2.8.1",
     "dotenv": "8.2.0",
@@ -15,7 +14,9 @@
     "helmet": "3.22.0",
     "mongoose": "5.9.10",
     "query-string": "5.1.1",
-    "ramda": "0.26.1"
+    "ramda": "0.26.1",
+    "redis": "3.0.2",
+    "connect-redis": "4.0.4"
   },
   "devDependencies": {
     "nodemon": "2.0.3",
