--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@types/cors": "2.8.6",
     "@types/express-session": "1.17.0",
-    "@types/connect-redis": "0.0.13",
     "@types/express": "4.17.6",
     "@types/helmet": "0.0.45",
     "@types/mongoose": "5.7.13",
@@ -20,9 +19,9 @@
     "@types/ramda": "0.26.1",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
-    "@types/rebass": "^4.0.5",
-    "@types/rebass__forms": "^4.0.1",
-    "@types/redis": "2.8.18",
+    "@types/rebass": "4.0.5",
+    "@types/rebass__forms": "4.0.1",
+    "@types/session-file-store": "1.2.1",
     "@typescript-eslint/eslint-plugin": "2.28.0",
     "@typescript-eslint/parser": "2.28.0",
     "eslint": "6.8.0",
