--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,15 +8,11 @@
     "body-parser": "1.19.0",
     "express-session": "1.17.1",
     "cors": "2.8.5",
-    "date-fns": "2.8.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "3.22.0",
     "mongoose": "5.9.10",
-    "query-string": "5.1.1",
-    "ramda": "0.26.1",
-    "redis": "3.0.2",
-    "connect-redis": "4.0.4"
+    "session-file-store": "1.4.0"
   },
   "devDependencies": {
     "nodemon": "2.0.3",
