--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     ]
   },
   "devDependencies": {
+    "@types/compression": "1.7.4",
     "@types/cors": "2.8.6",
     "@types/express-session": "1.17.0",
     "@types/express": "4.17.6",
