--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.19.0",
+    "compression": "1.7.4",
     "express-session": "1.17.1",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
